Fix some layout issues

--- a/front-end/src/app/reports/submission-workflow/submit-report.component.scss
+++ b/front-end/src/app/reports/submission-workflow/submit-report.component.scss
@@ -15,46 +15,6 @@ fieldset {
   flex-direction: column;
 }
 
-:host::ng-deep .p-password-input {
-  padding: 10px 36px 10px 10px !important;
-}
-
-:host::ng-deep .p-password-mask-icon {
-  right: 14px;
-}
-
-@media (min-width: 576px) {
-  #submit-report-container {
-    min-width: 512px;
-    max-width: 512px;
-    width: 512px;
-  }
-}
-
-@media (min-width: 768px) {
-  #submit-report-container {
-    min-width: 704px;
-    max-width: 704px;
-    width: 704px;
-  }
-}
-
-@media (min-width: 1200px) {
-  #submit-report-container {
-    min-width: 852px;
-    max-width: 852px;
-    width: 852px;
-  }
-}
-
-@media (min-width: 1400px) {
-  #submit-report-container {
-    min-width: 1052px;
-    max-width: 1052px;
-    width: 1052px;
-  }
-}
-
 label {
   margin-bottom: 8px;
 }
@@ -63,10 +23,6 @@ label,
 p,
 :host::ng-deep .p-select .p-select-label {
   font-size: 14px !important;
-}
-
-:host::ng-deep .p-select {
-  height: 42px;
 }
 
 .row {
