--- a/front-end/src/assets/styles/_variables.scss
+++ b/front-end/src/assets/styles/_variables.scss
@@ -142,6 +142,8 @@
   --p-togglebutton-padding: 1rem 1.25rem;
   --p-selectbutton-border-radius: 4px;
 
+  --p-form-field-padding-x: 14px;
+
   /* Toast */
   --p-toast-transition-duration: 3000;
   --p-toast-border-width: 1px;
